# newsletter_api

./: Cargo.toml
src/: lib.rs  main.rs
tests/: health_check.rs
